more aggressive cleanups
at the cost of checkerframework failing