@@ -19,7 +19,6 @@ import java.io.IOException;
 import java.io.StringWriter;
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
@@ -58,8 +57,7 @@ public class ObservationTableWriterTest {
 
         final URL resource = ObservationTableWriterTest.class.getResource(urlOfExpectedResult);
         Assert.assertNotNull(resource);
-        final String expectedResult =
-                new String(Files.readAllBytes(Paths.get(resource.toURI())), StandardCharsets.UTF_8);
+        final String expectedResult = Files.readString(Paths.get(resource.toURI()));
 
         Assert.assertEquals(writerResult.toString(), expectedResult);
     }
